--- a/style.css
+++ b/style.css
@@ -20,12 +20,13 @@ body {
 }
 
 h1 {
-  margin-top: 120px;
+  /* margin-top: 100px; */
+  text-align: center;
   font-size: 96px;
-  font-style: italic;
   font-family: "Abel", sans-serif;
-  font-weight: 600;
-  letter-spacing: 15px;
+  font-weight: 500;
+  letter-spacing: 10px;
+  margin: 100px 30px 0 30px;
 }
 
 span {
@@ -37,6 +38,7 @@ span {
   line-height: 14px;
   letter-spacing: 10px;
   text-transform: uppercase;
+  color: #e8c300;
 }
 
 button {
@@ -64,13 +66,14 @@ button.yellow {
 }
 
 div.yellow {
-  height: 9px;
-  width: 80px;
-  margin: 91px 0px;
-  background: #e8c300;
+  height: 4px;
+  width: 90px;
+  margin: 80px 0px;
+  background: rgba(255, 255, 255, 0.5);
+  /* background: transparent; */
   border-radius: 50px;
 }
 
 footer {
-  width: 200px;
+  height: 150px;
 }
