--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ button {
   color: #fff;
   background: #10100f;
   border: 1px solid rgba(255, 255, 255, 0.5);
-  font-family: "Open Sans";
+  font-family: Open Sans;
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
@@ -74,6 +74,24 @@ div.yellow {
   border-radius: 50px;
 }
 
-footer {
-  height: 150px;
+div.space {
+  margin: 100px;
+}
+
+footer a {
+  position: absolute;
+  bottom: 50px;
+  height: 80px;
+  width: 80px;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  text-decoration: none;
+  color: #fff;
+  font-size: 40px;
+  font-weight: 300;
+  font-family: "Abel";
+  cursor: pointer;
 }
