--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 
 html,
 body {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: #10100f;
   color: #fff;
 
@@ -22,12 +22,12 @@ body {
 
 div.left-gate {
   position: absolute;
-  height: 100%;
-  width: 50%;
+  height: 100vh;
+  width: 50vw;
   background: black;
   z-index: 1;
 
-  animation: linear 1s openLeft forwards;
+  animation: linear 1.2s openLeft forwards;
 }
 @keyframes openLeft {
   100% {
@@ -36,14 +36,15 @@ div.left-gate {
 }
 
 div.right-gate {
+  margin: 0;
   position: absolute;
-  height: 100%;
-  width: 50%;
+  height: 100vh;
+  width: 50vw;
   left: 50%;
   background: black;
   z-index: 1;
 
-  animation: linear 1s openRight forwards;
+  animation: linear 1.2s openRight forwards;
 }
 @keyframes openRight {
   100% {
